E-FB-K/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
  namespace: efbk
spec:
  selector:
    istio: ingressgateway  # Targets the Istio ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "efk.app.192.168.1.245.nip.io"
