E-FB-K/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
  namespace: efbk
spec:
  hosts:
  - "efk.app.192.168.1.245.nip.io"
  gateways:
  - helloworld-gateway
  http:
  - route:
    - destination:
        host: helloworld
        subset: v4
      weight: 100
